--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 specs = { version="0.18.0", default-features = false }
 js-sys = "0.3.61"
 wasm-bindgen = "0.2.84"
+console_error_panic_hook = "0.1.7"
 
 [dependencies.web-sys]
 version = "0.3.61"
@@ -20,5 +21,6 @@ features = [
   'Node',
   'Window',
   'HtmlCanvasElement',
-  'CanvasRenderingContext2d'
+  'CanvasRenderingContext2d',
+  'KeyboardEvent'
 ] 
