--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,12 @@ specs = { version="0.18.0", default-features = false }
 js-sys = "0.3.61"
 wasm-bindgen = "0.2.84"
 console_error_panic_hook = "0.1.7"
+specs-derive = "0.4.1"
+log = "0.4.17"
+
+[dependencies.console_log]
+version = "1.0.0"
+features = ['wasm-bindgen']
 
 [dependencies.web-sys]
 version = "0.3.61"
