--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ wasm-bindgen = "0.2.84"
 console_error_panic_hook = "0.1.7"
 specs-derive = "0.4.1"
 log = "0.4.17"
+futures = "0.3.27"
+wasm-bindgen-futures = "0.4.34"
 
 [dependencies.console_log]
 version = "1.0.0"
@@ -28,5 +30,6 @@ features = [
   'Window',
   'HtmlCanvasElement',
   'CanvasRenderingContext2d',
-  'KeyboardEvent'
+  'KeyboardEvent',
+  'MouseEvent'
 ] 
