--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ log = "0.4.17"
 futures = "0.3.27"
 wasm-bindgen-futures = "0.4.34"
 gloo-timers = { version="0.2.6", features=['futures'] }
+dominator = "0.5.32"
+futures-signals = "0.3.32"
 
 [dependencies.console_log]
 version = "1.0.0"
@@ -27,6 +29,7 @@ features = [
   'Document',
   'Element',
   'HtmlElement',
+  'HtmlCollection',
   'Node',
   'Window',
   'HtmlCanvasElement',
