--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-specs = { version="0.18.0", default-features = false }
+specs = { version="0.18.0", default-features = false, features = ["shred-derive"] }
 js-sys = "0.3.61"
 wasm-bindgen = "0.2.84"
 console_error_panic_hook = "0.1.7"
@@ -18,6 +18,9 @@ wasm-bindgen-futures = "0.4.34"
 gloo-timers = { version="0.2.6", features=['futures'] }
 dominator = "0.5.32"
 futures-signals = "0.3.32"
+hibitset = { version = "0.6.3",  default-features = false }
+shrev = "1.1.3"
+
 [dependencies.console_log]
 version = "1.0.0"
 features = ['wasm-bindgen']
